change platforio .ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,11 +11,7 @@
 [env:ATmega328P]
 platform = atmelavr
 board = ATmega328P
-
-board_build.f_cpu = 1000000UL
-upload_protocol = custom
-upload_flags = -pm328p 
-    -cusbasp
-     -B4
-
-upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+framework = arduino
+upload_protocol = arduino
+upload_port = COM4
+monitor_speed = 9600
