--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "io.h": "c",
         "delay.h": "c",
-        "irsensor.h": "c"
+        "irsensor.h": "c",
+        "ultrasonic.h": "c",
+        "motormovement.h": "c"
     }
 }
